Use proper constructors for property validators/observers